# Sockets-Examples

./: .gitignore  CMakeLists.txt  README.md
Code/Network/C/Sockets/: CMakeLists.txt
Code/Network/C/Sockets/BSD/INET/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/BSD/INET/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/BSD/INET/SOCK_STREAM/STANDARD/: receiver.c
Code/Network/C/Sockets/BSD/INET6/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/BSD/INET6/SOCK_DGRAM/STANDARD/: receiver.c
Code/Network/C/Sockets/BSD/INET6/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/BSD/INET6/SOCK_STREAM/STANDARD/: receiver.c
Code/Network/C/Sockets/BSD/LU/: CMakeLists.txt
Code/Network/C/Sockets/BSD/LU/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/BSD/LU/SOCK_SEQPACKET/: CMakeLists.txt
Code/Network/C/Sockets/BSD/LU/SOCK_SEQPACKET/STANDARD/: receiver.c
Code/Network/C/Sockets/BSD/LU/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/INET/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/INET/SOCK_DGRAM/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/Haiku/INET/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/INET/SOCK_STREAM/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/Haiku/INET6/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/INET6/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/INET6/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/INET6/SOCK_STREAM/STANDARD/: receiver.c
Code/Network/C/Sockets/Haiku/LU/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/LU/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/LU/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/Haiku/LU/SOCK_STREAM/STANDARD/: receiver.c
Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_BINTIME/: receiver.c
Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/: receiver.c
Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_REALTIME/: receiver.c
Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/: receiver.c
Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPING/: receiver.c
Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPNS/: receiver.c
Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/: receiver.c
Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_BINTIME/: receiver.c  sender.c
Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_MONOTONIC/: receiver.c  sender.c
Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_REALTIME/: receiver.c  sender.c
Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/: receiver.c  sender.c
Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMPING/: receiver.c
Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMPNS/: receiver.c  sender.c
Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/: receiver.c  sender.c
Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_BINTIME/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/: receiver.c
Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_REALTIME/: receiver.c
Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPING/: receiver.c
Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPNS/: receiver.c
Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/: receiver.c
Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_BINTIME/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_MONOTONIC/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_REALTIME/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMPING/: receiver.c
Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMPNS/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/: receiver.c  sender.c
Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_BINTIME/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDENTIALS/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDS/: receiver.c
Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDS2/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_REALTIME/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_SEQPACKET/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/: receiver.c  sender.c
Code/Network/C/Sockets/Linux/INET/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/Linux/INET/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/Linux/INET6/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/Linux/INET6/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/Linux/LU/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/Linux/LU/SOCK_SEQPACKET/: CMakeLists.txt
Code/Network/C/Sockets/Linux/LU/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/XNU/: CMakeLists.txt
Code/Network/C/Sockets/XNU/INET/: CMakeLists.txt
Code/Network/C/Sockets/XNU/INET/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/XNU/INET/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/XNU/INET6/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/XNU/INET6/SOCK_STREAM/: CMakeLists.txt
Code/Network/C/Sockets/XNU/LU/SOCK_DGRAM/: CMakeLists.txt
Code/Network/C/Sockets/XNU/LU/SOCK_STREAM/: CMakeLists.txt
(+190 files in other folders)
