cmake_minimum_required(VERSION 3.0)
project(AF_LU C)

set(CMAKE_C_STANDARD 23)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Build)

if(CMAKE_SYSTEM_NAME MATCHES "Linux")

    # # # # # # # #
    #    LUnix    #
    # # # # # # # #

    # # # # # # # # # # # # # # # # # # # # #
    #        LU - SOCK_STREAM - UNIX        #
    # # # # # # # # # # # # # # # # # # # # #

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - STANDARD +
    add_executable(LU_SOCK_STREAM_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_RIGHTS/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMP -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_CREDENTIALS +
    add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDENTIALS_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_CREDENTIALS/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDENTIALS_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_CREDENTIALS/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMPING -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMPING_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMPING/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMPING_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMPING/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMPNS -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMPNS_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMPNS/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMPNS_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMPNS/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #         LU - SOCK_DGRAM - UNIX        #
    # # # # # # # # # # # # # # # # # # # # #

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - STANDARD +
    add_executable(LU_SOCK_DGRAM_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_TIMESTAMP +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_CREDENTIALS +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_CREDENTIALS_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDENTIALS/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_CREDENTIALS_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDENTIALS/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_TIMESTAMPING -
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMPING_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPING/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMPING_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPING/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_TIMESTAMPNS +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMPNS_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPNS/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMPNS_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPNS/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #      LU - SOCK_SEQPACKET - UNIX       #
    # # # # # # # # # # # # # # # # # # # # #

    # LOCAL/UNIX - SOCK_SEQPACKET - F_UNIX - STANDARD +
    add_executable(LU_SOCK_SEQPACKET_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/STANDARD/sender.c)
    add_executable(LU_SOCK_SEQPACKET_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_SEQPACKET - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_RIGHTS/receiver.c)

    # LOCAL/UNIX - SOCK_SEQPACKET - F_UNIX - SCM_TIMESTAMP -
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_TIMESTAMP/receiver.c)

    # LOCAL/UNIX - SOCK_SEQPACKET - F_UNIX - SCM_CREDENTIALS +
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_CREDENTIALS_SENDER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_CREDENTIALS/sender.c)
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_CREDENTIALS_RECEIVER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_CREDENTIALS/receiver.c)

    # LOCAL/UNIX - SOCK_SEQPACKET - F_UNIX - SCM_TIMESTAMPING -
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_TIMESTAMPING_SENDER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_TIMESTAMPING/sender.c)
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_TIMESTAMPING_RECEIVER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_TIMESTAMPING/receiver.c)

    # LOCAL/UNIX - SOCK_SEQPACKET - F_UNIX - SCM_TIMESTAMPNS -
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_TIMESTAMPNS_SENDER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_TIMESTAMPNS/sender.c)
    add_executable(LU_SOCK_SEQPACKET_UNIX_SCM_TIMESTAMPNS_RECEIVER Code/Network/C/Sockets/LU/SOCK_SEQPACKET/CONTROL/SCM_TIMESTAMPNS/receiver.c)

    # # # # # # # #
    #     INET    #
    # # # # # # # #


    # # # # # # # # # # # # # # # # # # # # #
    #    INET - SOCK_STREAM - IPPROTO_TCP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET - SOCK_STREAM - IPPROTO_TCP - STANDARD +
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP +
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMPING +
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMPING_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMPING/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMPING_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMPING/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMPNS +
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMPNS_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMPNS/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMPNS_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMPNS/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #    INET - SOCK_DGRAM - IPPROTO_UDP    #
    # # # # # # # # # # # # # # # # # # # # #

    # INET - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMPING +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMPING_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPING/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMPING_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPING/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMPNS +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMPNS_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPNS/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMPNS_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPNS/receiver.c)

    # # # # # # # #
    #    INET 6   #
    # # # # # # # #


    # # # # # # # # # # # # # # # # # # # # #
    #   INET6 - SOCK_STREAM - IPPROTO_TCP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET6 - SOCK_STREAM - IPPROTO_TCP - STANDARD +
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP +
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMPING +
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMPING_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMPING/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMPING_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMPING/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMPNS +
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMPNS_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMPNS/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMPNS_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMPNS/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #    INET6 - SOCK_DGRAM - IPPROTO_UDP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMPING +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMPING_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPING/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMPING_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPING/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMPNS +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMPNS_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPNS/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMPNS_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMPNS/receiver.c)

    # Add compile options for Linux
    target_compile_definitions(LU_SOCK_DGRAM_UNIX_SCM_CREDENTIALS_SENDER PRIVATE _GNU_SOURCE)
    target_compile_definitions(LU_SOCK_DGRAM_UNIX_SCM_CREDENTIALS_RECEIVER PRIVATE _GNU_SOURCE)
    target_compile_definitions(LU_SOCK_STREAM_UNIX_SCM_CREDENTIALS_SENDER PRIVATE _GNU_SOURCE)
    target_compile_definitions(LU_SOCK_STREAM_UNIX_SCM_CREDENTIALS_RECEIVER PRIVATE _GNU_SOURCE)
    target_compile_definitions(LU_SOCK_SEQPACKET_UNIX_SCM_CREDENTIALS_SENDER PRIVATE _GNU_SOURCE)
    target_compile_definitions(LU_SOCK_SEQPACKET_UNIX_SCM_CREDENTIALS_RECEIVER PRIVATE _GNU_SOURCE)

elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")

    # # # # # # # #
    #    LUnix    #
    # # # # # # # #

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - STANDARD +
    add_executable(LU_SOCK_STREAM_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_RIGHTS/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMP -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMP_MONOTONIC -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_MONOTONIC_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_MONOTONIC_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - STANDARD +
    add_executable(LU_SOCK_DGRAM_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_TIMESTAMP -
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_TIMESTAMP_MONOTONIC -
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMP_MONOTONIC_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMP_MONOTONIC_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/receiver.c)

    # # # # # # # #
    #     INET    #
    # # # # # # # #


    # # # # # # # # # # # # # # # # # # # # #
    #    INET - SOCK_STREAM - IPPROTO_TCP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET - SOCK_STREAM - IPPROTO_TCP - STANDARD +
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP -
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP_MONOTONIC -
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_MONOTONIC_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_MONOTONIC_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #    INET - SOCK_DGRAM - IPPROTO_UDP    #
    # # # # # # # # # # # # # # # # # # # # #

    # INET - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP_MONOTONIC +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_MONOTONIC_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_MONOTONIC_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/receiver.c)

    # # # # # # # #
    #    INET 6   #
    # # # # # # # #


    # # # # # # # # # # # # # # # # # # # # #
    #   INET6 - SOCK_STREAM - IPPROTO_TCP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET6 - SOCK_STREAM - IPPROTO_TCP - STANDARD +
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP -
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP_MONOTONIC -
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_MONOTONIC_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_MONOTONIC_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #    INET6 - SOCK_DGRAM - IPPROTO_UDP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP_MONOTONIC +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_MONOTONIC_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_MONOTONIC_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP_MONOTONIC/receiver.c)

elseif(CMAKE_SYSTEM_NAME MATCHES "Haiku")

    # # # # # # # #
    #    LUnix    #
    # # # # # # # #

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - STANDARD +
    add_executable(LU_SOCK_STREAM_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_RIGHTS/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - STANDARD +
    add_executable(LU_SOCK_DGRAM_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/receiver.c)

    # # # # # # # #
    #     INET    #
    # # # # # # # #


    # # # # # # # # # # # # # # # # # # # # #
    #    INET - SOCK_STREAM - IPPROTO_TCP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET - SOCK_STREAM - IPPROTO_TCP - STANDARD +
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #    INET - SOCK_DGRAM - IPPROTO_UDP    #
    # # # # # # # # # # # # # # # # # # # # #

    # INET - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/receiver.c)

    # # # # # # # #
    #    INET 6   #
    # # # # # # # #


    # # # # # # # # # # # # # # # # # # # # #
    #   INET6 - SOCK_STREAM - IPPROTO_TCP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET6 - SOCK_STREAM - IPPROTO_TCP - STANDARD +
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #    INET6 - SOCK_DGRAM - IPPROTO_UDP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/receiver.c)

    # Search library network only for Haiku
    find_library(LIBNETWORK network)
    if(NOT LIBNETWORK)
        message(FATAL_ERROR "libnetwork not found on Haiku.")
    endif()

    # Add library libnetwork only for Haiku
    target_link_libraries(LU_SOCK_STREAM_UNIX_STANDARD_SENDER ${LIBNETWORK})
    target_link_libraries(LU_SOCK_STREAM_UNIX_STANDARD_RECEIVER ${LIBNETWORK})
    target_link_libraries(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_SENDER ${LIBNETWORK})
    target_link_libraries(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_RECEIVER ${LIBNETWORK})
    target_link_libraries(LU_SOCK_DGRAM_UNIX_STANDARD_SENDER ${LIBNETWORK})
    target_link_libraries(LU_SOCK_DGRAM_UNIX_STANDARD_RECEIVER ${LIBNETWORK})
    target_link_libraries(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_SENDER ${LIBNETWORK})
    target_link_libraries(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_RECEIVER ${LIBNETWORK})

    target_link_libraries(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER ${LIBNETWORK})
    target_link_libraries(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER ${LIBNETWORK})
    target_link_libraries(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER ${LIBNETWORK})
    target_link_libraries(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER ${LIBNETWORK})

    target_link_libraries(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER ${LIBNETWORK})
    target_link_libraries(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER ${LIBNETWORK})
    target_link_libraries(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER ${LIBNETWORK})
    target_link_libraries(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER ${LIBNETWORK})

elseif(CMAKE_SYSTEM_NAME MATCHES "FreeBSD")

    # # # # # # # #
    #    LUnix    #
    # # # # # # # #

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - STANDARD +
    add_executable(LU_SOCK_STREAM_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_RIGHTS/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMP -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_CREDS +
    add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDS_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_CREDS/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDS_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_CREDS/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_BINTIME -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_BINTIME_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_BINTIME/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_BINTIME_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_BINTIME/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_MONOTONIC -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_MONOTONIC_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_MONOTONIC/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_MONOTONIC_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_MONOTONIC/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_REALTIME -
    add_executable(LU_SOCK_STREAM_UNIX_SCM_REALTIME_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_REALTIME/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_REALTIME_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_REALTIME/receiver.c)

    # LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_CREDS2 +
    add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDS2_SENDER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_CREDS2/sender.c)
    add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDS2_RECEIVER Code/Network/C/Sockets/LU/SOCK_STREAM/CONTROL/SCM_CREDS2/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - STANDARD +
    add_executable(LU_SOCK_DGRAM_UNIX_STANDARD_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_STANDARD_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/STANDARD/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_RIGHTS +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_RIGHTS_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_RIGHTS/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_TIMESTAMP -
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_CREDS +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_CREDS_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDS/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_CREDS_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDS/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_BINTIME -
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_BINTIME_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_BINTIME/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_BINTIME_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_BINTIME/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_MONOTONIC -
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_MONOTONIC_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_MONOTONIC_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_REALTIME -
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_REALTIME_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_REALTIME/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_REALTIME_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_REALTIME/receiver.c)

    # LOCAL/UNIX - SOCK_DGRAM - F_UNIX - SCM_CREDS2 +
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_CREDS2_SENDER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDS2/sender.c)
    add_executable(LU_SOCK_DGRAM_UNIX_SCM_CREDS2_RECEIVER Code/Network/C/Sockets/LU/SOCK_DGRAM/CONTROL/SCM_CREDS2/receiver.c)

    # # # # # # # #
    #     INET    #
    # # # # # # # #


    # # # # # # # # # # # # # # # # # # # # #
    #    INET - SOCK_STREAM - IPPROTO_TCP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET - SOCK_STREAM - IPPROTO_TCP - STANDARD +
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/STANDARD/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP -
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_BINTIME -
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_BINTIME_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_BINTIME/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_BINTIME_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_BINTIME/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_MONOTONIC -
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_MONOTONIC_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_MONOTONIC/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_MONOTONIC_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_MONOTONIC/receiver.c)

    # INET - SOCK_STREAM - IPPROTO_TCP - SCM_REALTIME -
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_REALTIME_SENDER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_REALTIME/sender.c)
    add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_REALTIME_RECEIVER Code/Network/C/Sockets/INET/SOCK_STREAM/CONTROL/SCM_REALTIME/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #    INET - SOCK_DGRAM - IPPROTO_UDP    #
    # # # # # # # # # # # # # # # # # # # # #

    # INET - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/STANDARD/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_BINTIME +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_BINTIME_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_BINTIME/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_BINTIME_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_BINTIME/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_MONOTONIC +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_MONOTONIC_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_MONOTONIC_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/receiver.c)

    # INET - SOCK_DGRAM - IPPROTO_UDP - SCM_REALTIME +
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_REALTIME_SENDER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_REALTIME/sender.c)
    add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_REALTIME_RECEIVER Code/Network/C/Sockets/INET/SOCK_DGRAM/CONTROL/SCM_REALTIME/receiver.c)

    # # # # # # # #
    #    INET 6   #
    # # # # # # # #


    # # # # # # # # # # # # # # # # # # # # #
    #   INET6 - SOCK_STREAM - IPPROTO_TCP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET6 - SOCK_STREAM - IPPROTO_TCP - STANDARD +
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/STANDARD/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP -
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_BINTIME -
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_BINTIME_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_BINTIME/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_BINTIME_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_BINTIME/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_MONOTONIC -
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_MONOTONIC_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_MONOTONIC/sender.c)
    add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_MONOTONIC_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_MONOTONIC/receiver.c)

    # INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_REALTIME -
    add_executable(INET6_SOCK_STREAM_UNIX_SCM_REALTIME_SENDER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_REALTIME/sender.c)
    add_executable(INET6_SOCK_STREAM_UNIX_SCM_REALTIME_RECEIVER Code/Network/C/Sockets/INET6/SOCK_STREAM/CONTROL/SCM_REALTIME/receiver.c)

    # # # # # # # # # # # # # # # # # # # # #
    #    INET6 - SOCK_DGRAM - IPPROTO_UDP   #
    # # # # # # # # # # # # # # # # # # # # #

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/STANDARD/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_TIMESTAMP/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_BINTIME -
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_BINTIME_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_BINTIME/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_BINTIME_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_BINTIME/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_MONOTONIC +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_MONOTONIC_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_MONOTONIC_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_MONOTONIC/receiver.c)

    # INET6 - SOCK_DGRAM - IPPROTO_UDP - SCM_REALTIME +
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_REALTIME_SENDER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_REALTIME/sender.c)
    add_executable(INET6_SOCK_DGRAM_IPPROTO_UDP_SCM_REALTIME_RECEIVER Code/Network/C/Sockets/INET6/SOCK_DGRAM/CONTROL/SCM_REALTIME/receiver.c)

endif()
