cmake_minimum_required(VERSION 3.0...999999.0)

# # # # # # # # # # # # # # # # # # # # #
#    INET - SOCK_DGRAM - IPPROTO_UDP    #
# # # # # # # # # # # # # # # # # # # # #

# INET - SOCK_DGRAM - IPPROTO_UDP - STANDARD +
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_SENDER STANDARD/sender.c)
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_STANDARD_RECEIVER STANDARD/receiver.c)

# INET - SOCK_DGRAM - IPPROTO_UDP - SCM_TIMESTAMP +
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_SENDER CMSG/SCM_TIMESTAMP/sender.c)
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_TIMESTAMP_RECEIVER CMSG/SCM_TIMESTAMP/receiver.c)

# INET - SOCK_DGRAM - IPPROTO_UDP - SCM_BINTIME +
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_BINTIME_SENDER CMSG/SCM_BINTIME/sender.c)
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_BINTIME_RECEIVER CMSG/SCM_BINTIME/receiver.c)

# INET - SOCK_DGRAM - IPPROTO_UDP - SCM_MONOTONIC +
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_MONOTONIC_SENDER CMSG/SCM_MONOTONIC/sender.c)
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_MONOTONIC_RECEIVER CMSG/SCM_MONOTONIC/receiver.c)

# INET - SOCK_DGRAM - IPPROTO_UDP - SCM_REALTIME +
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_REALTIME_SENDER CMSG/SCM_REALTIME/sender.c)
add_executable(INET_SOCK_DGRAM_IPPROTO_UDP_SCM_REALTIME_RECEIVER CMSG/SCM_REALTIME/receiver.c)
