cmake_minimum_required(VERSION 3.0...999999.0)

# # # # # # # # # # # # # # # # # # # # #
#    INET - SOCK_STREAM - IPPROTO_TCP   #
# # # # # # # # # # # # # # # # # # # # #

# INET - SOCK_STREAM - IPPROTO_TCP - STANDARD +
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER STANDARD/sender.c)
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER STANDARD/receiver.c)

# INET - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP -
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_SENDER CMSG/SCM_TIMESTAMP/sender.c)
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_RECEIVER CMSG/SCM_TIMESTAMP/receiver.c)

# INET - SOCK_STREAM - IPPROTO_TCP - SCM_BINTIME -
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_BINTIME_SENDER CMSG/SCM_BINTIME/sender.c)
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_BINTIME_RECEIVER CMSG/SCM_BINTIME/receiver.c)

# INET - SOCK_STREAM - IPPROTO_TCP - SCM_MONOTONIC -
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_MONOTONIC_SENDER CMSG/SCM_MONOTONIC/sender.c)
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_MONOTONIC_RECEIVER CMSG/SCM_MONOTONIC/receiver.c)

# INET - SOCK_STREAM - IPPROTO_TCP - SCM_REALTIME -
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_REALTIME_SENDER CMSG/SCM_REALTIME/sender.c)
add_executable(INET_SOCK_STREAM_IPPROTO_TCP_SCM_REALTIME_RECEIVER CMSG/SCM_REALTIME/receiver.c)
